--- a/services/mail-template/index.hbs
+++ b/services/mail-template/index.hbs
@@ -14,7 +14,7 @@
 		}
 
 		img{
-			width: 50%;
+			width: 60%;
 		}
 		h3{
 			text-align: justify;
@@ -51,7 +51,7 @@
 <body>
 
 	<div>
-		<img src="https://lh3.google.com/u/0/d/1iqPYPvCgxugti_oIR2R2K1NN3bLfR2lH=w1366-h662-iv1">
+		<img src="http://res.cloudinary.com/joseencinoza/image/upload/v1527441724/IMG-20180523-WA0002.jpg">
 		<h3>Hola te damos la bienvenida a Mystique. Ahora podrás disfrutar de las bondades de Mystique Mobile. Recibirás promociones personalizadas. Podrás ver todos nuestros servicios y los mejores consejos de profesionales seleccionados especialmente para ti. Para ello descarga ya Mystique mobile, e ingresa con las credenciales que ingresaste en tu suscripción</h3>
 		<br>
 		<a href="https://www.google.com/"><p>DESCARGAR APP</p></a>
