--- a/services/mail-template/index.hbs
+++ b/services/mail-template/index.hbs
@@ -1,62 +1,130 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<style type="text/css">
-		
-		body{
-			background: #FF0DFF;
-		}
+<meta name="viewport" content="width=device-width" />
 
-		div{
-			text-align: center;
-/*			background: red;*/
-		}
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Mystique Mobile</title>
+	
+<link rel="stylesheet" type="text/css" href="email.css" />
 
-		img{
-			width: 60%;
-		}
-		h3{
-			text-align: justify;
-			padding-right: 10%;
-			padding-left: 10%;
-			line-height: 20px
-		}
-		a{
-			margin-top: 5px;
-			display: block;
-    		width: 40%;
-		    background-color: #b01f48;
-		    border-color: #b01f48;
-		    display: inline-block;
-		    padding: 3px 6px;
-		    margin-bottom: 0;
-		    font-size: 12px;
-		    font-weight: 400;
-		    text-align: center;
-		    white-space: nowrap;
-		    vertical-align: middle;
-		    border: 1px solid transparent;
-		    border-radius: 4px;
-		    text-decoration: none;
-		}
-
-		a p{
-			color: #fff;
-			margin: 5px 0;
-		}
-
-	</style>
 </head>
 <body>
 
-	<div>
-		<img src="http://res.cloudinary.com/joseencinoza/image/upload/v1527441724/IMG-20180523-WA0002.jpg">
-		<h3>Hola te damos la bienvenida a Mystique. Ahora podrás disfrutar de las bondades de Mystique Mobile. Recibirás promociones personalizadas. Podrás ver todos nuestros servicios y los mejores consejos de profesionales seleccionados especialmente para ti. Para ello descarga ya Mystique mobile, e ingresa con las credenciales que ingresaste en tu suscripción</h3>
-		<br>
-		<a href="https://www.google.com/"><p>DESCARGAR APP</p></a>
-	</div>
+<body bgcolor="#FFFFFF">
 
+<!-- HEADER -->
+<table class="head-wrap" bgcolor="#f735a9">
+	<tr>
+		<td></td>
+		<td class="header container">
+			
+				<div class="content">
+					<table >
+					<tr>
+						<td align="right"><h6 color="#FFFFFF" class="collapse">Mystique Mobile</h6></td>
+					</tr>
+				</table>
+				</div>
+				
+		</td>
+		<td></td>
+	</tr>
+</table><!-- /HEADER -->
+
+
+<!-- BODY -->
+<table class="body-wrap">
+	<tr>
+		<td></td>
+		<td class="container" bgcolor="#FFFFFF">
+
+			<div class="content">
+			<table>
+				<tr>
+					<td>
+						
+						<h3>Bienvenido</h3>{{nombreCliente}} {{apellidoCliente}}
+						<p class="lead">Te damos la bienvenida a la comunidad de usuarios de Mystique Mobile, gracias a ello podras disfrutar de nuestros beneficios.</p>
+						
+						<p><img src="http://res.cloudinary.com/joseencinoza/image/upload/v1527441724/IMG-20180523-WA0002.jpg"/></p><!-- /hero -->
+						
+						
+						<h3>¿Cómo usar Mystique Mobile? </h3>
+						<p>Podras solicitar servicios y disfrutar de contenido personalizado, acorde a tu perfil, como consejos de belleza, servicios y promociones.<br/>
+							Descarga Mystique Mobile en tu telefóno inteligente e ingresa con tu usuario y contraseña indicados en la suscripción.
+						</p>
+						<a class="btn">Descarga Mystique!</a>
+												
+						<br/>
+						<br/>							
+												
+						<!-- social & contact -->
+						<table class="social" width="100%">
+							<tr>
+								<td>
+									
+									<!--- column 1 -->
+									<table align="left" class="column">
+										<tr>
+											<td>				
+												
+												<h5 class="">Contactanos:</h5>
+												<p class=""><a href="#" class="soc-btn fb">
+												Twitter</a>
+						                        Correo: <strong><a href=" ">mystique@gmail.com</a></strong></p>
+												
+											</td>
+										</tr>
+									</table><!-- /column 1 -->	
+									
+									
+									<span class="clear"></span>	
+									
+								</td>
+							</tr>
+						</table><!-- /social & contact -->
+					
+					
+					</td>
+				</tr>
+			</table>
+			</div>
+									
+		</td>
+		<td></td>
+	</tr>
+</table><!-- /BODY -->
+
+<!-- FOOTER -->
+<table class="footer-wrap">
+	<tr>
+		<td></td>
+		<td class="container">
+			
+				<!-- content -->
+				<div class="content">
+				<table>
+
+											<small>Mystique respeta tu privacidad, no tenemos acceso a tu contraseña</small>
+				<tr>
+				
+					<td align="center">
+						<p>
+							<a href="#">Mystique Mobile</a> |
+							<a href="#">Terminos y condiciones</a> 
+						</p>
+					</td>
+				</tr>
+			</table>
+				</div><!-- /content -->
+				
+		</td>
+		<td></td>
+	</tr>
+</table><!-- /FOOTER -->
+
+</body>
 
 </body>
 </html>
