arreglar plantilla correo

--- a/services/mail-template/index3.hbs
+++ b/services/mail-template/index3.hbs
@@ -54,14 +54,20 @@
 
 		/* pie */
 		.pie{
-			margin-top: 5px;
 			padding: 4px 10%;
+		}
+
+		.fondogris{
 			background: #ebebeb;
+		}
+
+		.pie h3{
+			text-decoration: none;
 		}
 
 		.copy{
 			padding: 4px 10%;
-			font-size: 10px;
+			font-size: 11px;
 		}
 
 		.copy p{
@@ -96,20 +102,27 @@
 		</p>
 		<br>
 	</div>
-	<div class="contenidoc">
+		<div class="contenidoc fondogris">
 		<!-- <a class="btn">Descarga Mystique!</a> -->
 		<h2 class="rosa">Descarga Mystique!</h2>
 		<a href=""><img class="don" src="http://inglesmeyer.com.co/digital/courses/tips/playStore.png"/></a>
 		<a href=""><img class="don" src="https://www.lamansiondelsol.com/wp-content/themes/InternetPower/img/appStore.png"/></a>
+		<br>
+		<br><br>
 	</div>
-	<br>
-	<div class="pie">
+	<div class="contenidoc pie">
+		<h3>Ingresa a nuestra App con tus credenciales <br>Correo: {{correo}}<br>Contraseña: {{contrasenia}}</h3>
+<!-- 		<h3>Correo: {{correo}}</h3>
+		<h3>Contraseña: {{contrasenia}}</h3> -->
+	</div>
+	<div class="pie fondogris">
 		<p class="">Contáctanos:</p>
 		<p class="">Twitter: <strong><a href=" ">mystique</a></strong></p>
 		<p class="">Correo: <strong><a href=" ">mystique@gmail.com</a></strong></p>
 	</div>
+	<br>
 	<div class="contenidol copy">
-		<p>Mystique respeta tu privacidad, no tenemos acceso a tu contraseña</p>
+		<p>Mystique respeta tu privacidad y no tiene acceso a tu contraseña, le recomendamos guardar este correo en caso de olvido</p>
 	</div>
 	<div class="contenidoc copy">
 		<a href="#">MystiqueApp</a> |
